<resources>
    <string name="app_name">Orbital Note</string>
    <string name="add">Add</string>
    <string name="add_an_item">Add an Item</string>
    <string name="save">Save</string>
    <string name="update_the_item">Update the item</string>
    <string name="textview">TextView</string>
    <string name="_0">0</string>
    <string name="search">Search</string>
    <string name="sign_in_with_google">Sign In with Google</string>
    <string name="sign_in_with_google_using_firebase">Sign-In with Google using Firebase!</string>
    <string name="sign_in">Sign In</string>
    <string name="logo" />
    <string name="firebase" />
    <string name="github" />
    <string name="facebook" />
    <string name="logout">Logout</string>


</resources>