<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Application"
    android:id="@+id/layout">

        <RelativeLayout
            android:id="@+id/layout1"
            android:layout_width="match_parent"
            android:layout_height="75dp">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="389dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="13dp"
                    android:layout_marginTop="13dp"
                    android:layout_marginEnd="13dp"
                    android:background="@drawable/gradient_animation"
                    android:minHeight="?attr/actionBarSize"
                    android:theme="?attr/actionBarTheme"
                    app:title="Home" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="300dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="38dp"
                    android:inputType="number"
                    android:text="@string/_0"
                    android:textColor="@color/white"
                    tools:ignore="RelativeOverlap,TextViewEdits" />

                <EditText
                    android:id="@+id/editText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="102dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="98dp"
                    android:backgroundTint="@color/white"
                    android:ems="10"
                    android:hint="@string/search"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />

                <ImageButton
                    android:id="@+id/imageButton"
                    android:layout_width="48dp"
                    android:layout_height="51dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="310dp"
                    android:layout_marginTop="18dp"
                    android:layout_marginEnd="53dp"
                    android:background="#00FFFFFF"
                    android:contentDescription="@string/search"
                    app:srcCompat="@drawable/ic_baseline_search_24" />


        </RelativeLayout>


        <Button
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="6dp"
            android:elevation="3dp"
            android:padding="10dp"
            android:text="@string/add"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@drawable/gradient_animation"/>

        <EditText
            android:id="@+id/edItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="2dp"
            android:layout_toStartOf="@+id/btnAdd"
            android:hint="@string/add_an_item"
            android:inputType="text"
            android:autofillHints="" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="75dp" />

</RelativeLayout>

